--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "author": "Anderson Bruns",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^5.22.5"
   }
