--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "cron": "^2.0.0",
     "express": "^4.18.1",
+    "mqtt": "^4.3.7",
     "mysql2": "^2.3.3",
     "sequelize": "^5.22.5"
   }
